--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: Nunito,sans-serif,Helvetica,Fallback,sans-serif;
+    background-color: #f8f8f8!important;
+    font-size: 1.6rem;
+    line-height: 1.5;
+}
